[project]
name = "ciphrbox"
version = "0.1.0"
description = "A Secure File Vault"
authors = [
    {name = "Krishna Kumar D",email = "dkrishnakumar987@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
