[package]
name = "libciphrbox"
version = "0.1.0"
edition = "2024"

[lib]
name = "libciphrbox"
crate-type = ["cdylib", "rlib"]

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
blake3 = "1.8.2"
byteorder = "1.5.0"
chacha20poly1305 = "0.10.1"
dirs = "6.0.0"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34.7"
tempfile = "3.20.0"
walkdir = "2.5.0"
